Fix select box functionality on mobile

--- a/src/styles/partials/_map-results.scss
+++ b/src/styles/partials/_map-results.scss
@@ -94,7 +94,8 @@
 
   @media (max-width: $mq-medium) {
     width: 100%;
-    height: 400px;
+    height: 80px;
+    max-height: 80px;
     font-size: 1.2rem;
   }
 
